--- a/login.html
+++ b/login.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="en">
 
@@ -8,6 +7,7 @@
     <title>Login</title>
     <!-- Add Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" />
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" rel="stylesheet" />
     <style>
         body {
             background: #1e203d;
@@ -72,6 +72,12 @@
                 display: none;
             }
         }
+
+        .input-group-text {
+            background-color: #1e203d;
+            color: white;
+            border: none;
+        }
     </style>
 </head>
 
@@ -83,16 +89,28 @@
     <div class="wrapper">
         <h2>Login</h2>
         <form action="#">
+            <!-- Username Field with Icon -->
             <div class="mb-3">
                 <label for="username" class="form-label text-white">Username</label>
-                <input type="text" id="username" class="form-control" placeholder="Enter your username" required>
+                <div class="input-group">
+                    <span class="input-group-text">
+                        <i class="fas fa-user"></i>
+                    </span>
+                    <input type="text" id="username" class="form-control" placeholder="Enter your username" required>
+                </div>
             </div>
+            <!-- Password Field with Icon -->
             <div class="mb-3 position-relative">
                 <label for="password" class="form-label text-white">Password</label>
-                <input type="password" id="password" class="form-control" placeholder="Enter your password" required>
-                <span id="toggle-password" class="position-absolute top-50 end-0 translate-middle-y me-3" style="cursor: pointer;">
-                    <img src="https://img.icons8.com/ios-filled/50/ffffff/visible.png" alt="eye-icon" width="20" height="20">
-                </span>
+                <div class="input-group">
+                    <span class="input-group-text">
+                        <i class="fas fa-lock"></i>
+                    </span>
+                    <input type="password" id="password" class="form-control" placeholder="Enter your password" required>
+                    <span id="toggle-password" class="position-absolute top-50 end-0 translate-middle-y me-3" style="cursor: pointer;">
+                        <img src="https://img.icons8.com/ios-filled/50/ffffff/visible.png" alt="eye-icon" width="20" height="20">
+                    </span>
+                </div>
             </div>
             <div class="form-check mb-3">
                 <input type="checkbox" id="terms" class="form-check-input">
@@ -108,7 +126,6 @@
     </div>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
-
 </body>
 
 </html>
