--- a/register.html
+++ b/register.html
@@ -1,14 +1,13 @@
-
-
 <!DOCTYPE html>
 <html lang="en">
 
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Login</title>
+    <title>Registrasi</title>
     <!-- Add Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" />
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" rel="stylesheet" />
     <style>
         body {
             background: #1e203d;
@@ -73,6 +72,12 @@
                 display: none;
             }
         }
+
+        .input-group-text {
+            background-color: #1e203d;
+            color: white;
+            border: none;
+        }
     </style>
 </head>
 
@@ -84,26 +89,52 @@
     <div class="wrapper">
         <h2>REGISTRASI</h2>
         <form action="#">
+            <!-- Full Name Field with Icon -->
             <div class="mb-1">
                 <label for="name" class="form-label text-white">Full Name</label>
-                <input type="text" id="name" class="form-control" placeholder="Enter your name" required>
+                <div class="input-group">
+                    <span class="input-group-text">
+                        <i class="fas fa-user"></i>
+                    </span>
+                    <input type="text" id="name" class="form-control" placeholder="Enter your name" required>
+                </div>
             </div>
+            <!-- Email Field with Icon -->
             <div class="mb-1">
                 <label for="email" class="form-label text-white">Email</label>
-                <input type="email" id="email" class="form-control" placeholder="Enter your email" required>
+                <div class="input-group">
+                    <span class="input-group-text">
+                        <i class="fas fa-envelope"></i>
+                    </span>
+                    <input type="email" id="email" class="form-control" placeholder="Enter your email" required>
+                </div>
             </div>
+            <!-- Password Field with Icon -->
             <div class="mb-1">
                 <label for="password" class="form-label text-white">Password</label>
-                <input type="password" id="password" class="form-control" placeholder="Enter your password" required>
+                <div class="input-group">
+                    <span class="input-group-text">
+                        <i class="fas fa-lock"></i>
+                    </span>
+                    <input type="password" id="password" class="form-control" placeholder="Enter your password" required>
+                </div>
             </div>
+            <!-- Confirm Password Field with Icon -->
             <div class="mb-1">
                 <label for="confirm-password" class="form-label text-white">Confirm Password</label>
-                <input type="password" id="confirm-password" class="form-control" placeholder="Confirm your password" required>
+                <div class="input-group">
+                    <span class="input-group-text">
+                        <i class="fas fa-lock"></i>
+                    </span>
+                    <input type="password" id="confirm-password" class="form-control" placeholder="Confirm your password" required>
+                </div>
             </div>
+            <!-- Terms and Conditions -->
             <div class="form-check mb-1">
                 <input type="checkbox" id="terms" class="form-check-input">
                 <label for="terms" class="form-check-label">I accept terms & conditions</label>
             </div>
+            <!-- Submit Button -->
             <div class="mb-1">
                 <button type="submit" class="btn w-100" onclick="window.location.href='Login.html';">Register Now</button>
             </div>
@@ -112,10 +143,9 @@
             </div>
         </form>
     </div>
-
-
     <!-- Add Bootstrap JS -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
 
 </body>
+
 </html>
